# transittag

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  docker-compose.yml
grafana/dashboards/: transittag.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: influxdb.yml
src/: auth.c  auth.h  config.h  influxdb.c  influxdb.h  influxdb_stub.c  main.c  pricing.c  pricing.h  qr_svg.c  qr_svg.h  routes.c  routes.h  routes_stub.c  seat_manager.c  seat_manager.h
www/: app.js  index.html  manifest.json  stops.json  style.css  sw.js
www/pwa/: index.html  pwa.css  pwa.js
